[package]
name = "serum-common"
version = "0.1.0"
description = "Serum common utilities"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[features]
program = ["solana-sdk/program", "solana-program"]
client = [
    "solana-sdk/default",
    "solana-client",
    "anyhow",
    "rand",
    "serde_json",
    "bs58",
    "bincode",
]
strict = []
devnet = []
default = []

[dependencies]
spl-token = { version = ">=5" }
arrayref = "0.3.6"
serde = { version = "1.0.150", features = ["derive"] }
solana-sdk = { version = "2", default-features = false }

# Program only.
solana-program = { version = "2", optional = true }

# Client only.
anyhow = { version = "1.0.66", optional = true }
rand = { version = "0.7.3", optional = true }
solana-client = { version = "2", optional = true }
serde_json = { version = "1.0.89", optional = true }
bs58 = { version = "0.4.0", optional = true }
bincode = { version = "1.3.3", optional = true }
